--- a/Joint Land Page/style.css
+++ b/Joint Land Page/style.css
@@ -59,6 +59,7 @@ nav.top-right {
   right: 100px;
   bottom: 100px;
   background: #000000;
+  color: #ffffff;
   transition-delay: 0.2s;
 }
 .open .l3 {
@@ -85,6 +86,7 @@ nav.top-right {
   right: 150px;
   bottom: 150px;
   background: #ffffff;
+  color: #000000;
   transition-delay: 0.3s;
 }
 .open .l4 {
@@ -111,6 +113,7 @@ nav.top-right {
   right: 200px;
   bottom: 200px;
   background: #000000;
+  color: #ffffff;
   transition-delay: 0.4s;
 }
 .open .l5 {
