--- a/Joint Land Page/style.css
+++ b/Joint Land Page/style.css
@@ -138,7 +138,7 @@ nav.top-right {
   line-height: 100px;
   padding: 0;
   width: 100px;
-  background: green;
+  background: black;
   opacity: 1;
   transform: none;
   pointer-events: auto;
